# Benchmarks

Regex/: CMakeLists.txt  python_regex.py  run.ps1
Regex/Solution/include/: BaseRex.h
Regex/Solution/include/Rex/: Boost_Rex.h  C_Rex.h  Pearl_Rex.h  STL_Rex.h  Xpressive_Rex.h  re2_Rex.h
Regex/Solution/src/: BaseRex.cpp  BenchRex.cpp
Regex/Solution/src/Rex/: Boost_Rex.cpp  C_Rex.cpp  Pearl_Rex.cpp  STL_Rex.cpp  Xpressive_Rex.cpp  re2_Rex.cpp
